--- a/pagamento/src/main/resources/application.properties
+++ b/pagamento/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=pagamento
 server.port=8050
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
